--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       
       - name: Create config.js from secrets
         run: |
-          cat > config.js << 'EOF'
+          cat > config.js << EOF
           const CONFIG = {
             API_KEY: '${{ secrets.API_KEY }}',
             SHEET_ID: '${{ secrets.SHEET_ID }}',
